# nightlife

./: .gitignore  .gitignore-snippets.toml  .pre-commit-config.yaml  Makefile  README.md  agent.Dockerfile  agent.py  agent.requirements.txt  auth.py  principal.py  pyproject.toml  requirements.txt  setup.py
config/events/: a
config/handlers/a/: handler3  handler4
config/handlers/theme/: 1-theme-file  2-notify-nvim  2-notify-vim
examples/events/: theme-macos
examples/handlers/test-event/: handler1  handler2
examples/handlers/theme/: 1-theme-file  2-notify-nvim  2-notify-vim
nightlife/: __init__.py  agent.py  config.py  dispatch.py  principal.py  respond.py  run_server.py  state.py  system.py  topic_handler_utils.py
nightlife/installer/: __init__.py  argument_parser.py  config_installer.py  installer_interface.py  launchd_installer.py
scripts/: install  install-launchd  nightlife-agent  nightlife-auth  nightlife-dispatch  nightlife-install  nightlife-notify  nightlife-principal  nightlife-register  nightlife-respond
src/nightlife/: agent.py  config.py
src/nightlife/installer/: __init__.py  installer.py  launchd_installer.py
src/templates/launchd/: service.plist.in
