[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nightlife"
description = "Event propagation service"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
  "cryptography>=41.0",
  "fastapi[all]>=0.104,<1.0",
  "psutil>=5.9",
  "pydantic-settings>=2.1",
  "pydantic>=2.5",
  "pyjwt[crypto]>=2.8",
  "uvicorn[standard]>=0.24,<1.0",
  "watchdog>=3.0",
]
authors = [
  {name = "Christopher Patton", email = "chpatton013@gmail.com"},
]
maintainers = [
  {name = "Christopher Patton", email = "chpatton013@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
tests = [
  "mypy>=1.8",
  "types-psutil>=5.9",
]
dev = [
  "black>=24.2",
]

[project.scripts]
nightlife-agent = "scripts.nightlife-agent:main"
nightlife-auth = "scripts.nightlife-auth:main"
nightlife-dispatch = "scripts.nightlife-dispatch:main"
nightlife-install = "scripts.nightlife-install:main"
nightlife-notify = "scripts.nightlife-notify:main"
nightlife-principal = "scripts.nightlife-principal:main"
nightlife-register = "scripts.nightlife-register:main"
nightlife-respond = "scripts.nightlife-respond:main"

[project.urls]
Repository = "https://github.com/chpatton013/nightlife.git"
"Bug Tracker" = "https://github.com/chpatton013/nightlife/issues"
