[build-system]
requires = ["setuptools>=69.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nightlife"
description = "Event propagation service"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
  "cryptography>=41.0",
  "fastapi[all]>=0.104,<1.0",
  "psutil>=5.9",
  "pydantic-settings>=2.1",
  "pydantic>=2.5",
  "pyjwt[crypto]>=2.8",
  "uvicorn[standard]>=0.24,<1.0",
  "watchdog>=3.0",
]
authors = [
  {name = "Christopher Patton", email = "chpatton013@gmail.com"},
]
maintainers = [
  {name = "Christopher Patton", email = "chpatton013@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
nightlife-agent = "nightlife.scripts.agent:main"
nightlife-auth = "nightlife.scripts.auth:main"
nightlife-dispatch = "nightlife.scripts.dispatch:main"
nightlife-install = "nightlife.scripts.install:main"
nightlife-notify = "nightlife.scripts.notify:main"
nightlife-principal = "nightlife.scripts.principal:main"
nightlife-register = "nightlife.scripts.register:main"
nightlife-respond = "nightlife.scripts.respond:main"

[project.urls]
Repository = "https://github.com/chpatton013/nightlife.git"
"Bug Tracker" = "https://github.com/chpatton013/nightlife/issues"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["nightlife"]

[tool.setuptools.package-data]
templates = ["*.in"]
